# grada

./: .gitignore  .prettierignore  FULLSTACK_TODO_PLAN.md  README.md  SMART_CATALOG_TODO_PLAN.md  WholesaleFlow_Design_Document.docx  Women SST PO Template House Of Raeli Updated.xlsx - Sheet1.csv  docker-compose.yml  dress_attributes_master_updated.xlsx - master_dress_attributes.csv  kira.db  package-lock.json  package.json  pl-PLAN.md  pnpm-lock.yaml  prd.txt  smart_catalog_features_spec.md  tech stack.txt  tsconfig.base.json
apps/api/: .env.example  Makefile  README.md  alembic.ini  fix_images.py  pyproject.toml  test_ai_direct.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260325_0001_runtime_schema_updates.py  20260330_0002_buyer_document_templates.py  20260331_0003_marketplace_document_templates.py  20260331_0004_packing_list_templates.py  20260331_0005_barcode_marketplace_templates.py  20260402_0006_received_po_exception_inbox.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/config/: hsn_codes.py  styli_attributes.py
apps/api/app/core/: audit.py  config.py  security.py  super_admin.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  ai_correction.py  audit_log.py  barcode_job.py  buyer_document_template.py  carton_capacity_rule.py  user.py  (+16 more)
apps/api/tests/: test_admin.py  test_auth.py  test_catalog.py  test_documents.py  test_health.py  test_object_storage.py  test_po_requests.py  test_received_po_parser.py  test_received_po_parser_storage.py  test_received_pos.py  test_settings.py  test_uploads.py
(+516 files in other folders)
